# SelExNet

./: .gitignore  LICENSE  README.md  config.yml  finetune.py  main.py  pyproject.toml  test_single.py
configs/: finetune_config.yaml  finetune_config.yml  train_config.yaml  train_config.yml
selexnet/: __init__.py  _version.py  train.py
src/: __init__.py  blochsim.py  dataset.py  ddp.py  determinism.py  model.py  test.py  train.py  utils.py
