[build-system]
requires = [
  "setuptools>=64.0.0",
  "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "SelExNet"
version = "0.1.0"
description = "Self-supervised Design of Joint RF and Gradient Pulse Sequences for 2D Spatially Selective Excitation in MRI"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Chris Xiao", email = "yl.xiao@mail.utoronto.ca" }]
dependencies = [
  "omegaconf>=2.3",
  "tqdm>=4.66",
  "scipy>=1.13",
  "torch>=2.4.1,<3.0",
  "numpy>=2.0",
  "matplotlib>=3.9",
  "matplotlib-inline>=0.1.7",
  "pytorch-msssim>=1.0.0",
  "torch-pca>=1.0.0",
  "opencv-python>=4.10",
  "Pillow>=10.0",
]
[project.optional-dependencies]
all = [
  "torchvision>=0.19,<1.0",
  "pydicom>=2.4",
  "scikit-image>=0.24",
  "scikit-learn>=1.5",
]
dev = [
  "SelExNet[all]", # Include all dependencies for development
  "pytest",
  "black",
  "flake8",
  "isort",
  "mypy",
  "jupyterlab",
]

[tool.setuptools]
packages = ["src"]
py-modules = ["main", "finetune"]

[project.scripts]
selexnet-train = "main:main"
selexnet-finetune = "finetune:main"
